kubernetes/clusters/homelab/apps/restic-rest-server/service.yaml
apiVersion: v1
kind: Service
metadata:
  name: restic-rest-server
  namespace: restic
  labels:
    app.kubernetes.io/name: restic-rest-server
spec:
  type: ClusterIP
  ports:
    - port: 8000
      targetPort: http
      protocol: TCP
      name: http
  selector:
    app.kubernetes.io/name: restic-rest-server
